# cybercare_python_consumer_propagator

./: Makefile  README.md  config.json  events.db  events.json  pyproject.toml  test_task_python.md
consumer/: main.py
propagator/: main.py
tests/: test_consumer.py  test_propagator.py
utils/: __init__.py  utils.py
